--- a/.env
+++ b/.env
@@ -53,7 +53,7 @@ SMTP_PORT=587
 SMTP_USE_TLS=true
 SMTP_USE_SSL=false
 
-APP_URL="https://yourdomain.com"
+APP_URL="https://bg.ai.taj.alminessa.com/"
 
 LANGFUSE_PUBLIC_KEY="your-langfuse-public-key"
 LANGFUSE_SECRET_KEY="your-langfuse-secret-key"
@@ -61,12 +61,12 @@ OTEL_EXPORTER_OTLP_ENDPOINT="https://cloud.langfuse.com/api/public/otel"
 
 # Server settings
 HOST="0.0.0.0"
-PORT=8000
+PORT=8100
 DEBUG=false
 
 # Seeder settings
-ADMIN_EMAIL="admin@evoai.com"
-ADMIN_INITIAL_PASSWORD="strongpassword123"
+ADMIN_EMAIL="mohamedsalkgaya04@gmail.com"
+ADMIN_INITIAL_PASSWORD="Mohamedsako27@"
 DEMO_EMAIL="demo@example.com"
 DEMO_PASSWORD="demo123"
 DEMO_CLIENT_NAME="Demo Client"
