--- a/.env
+++ b/.env
@@ -53,7 +53,7 @@ SMTP_PORT=587
 SMTP_USE_TLS=true
 SMTP_USE_SSL=false
 
-APP_URL="https://bg.ai.taj.alminessa.com/"
+APP_URL="https://bg.ai.alminessa.com/"
 
 LANGFUSE_PUBLIC_KEY="your-langfuse-public-key"
 LANGFUSE_SECRET_KEY="your-langfuse-secret-key"
