--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -26,7 +26,7 @@ services:
       - ./logs:/app/logs
       - ./static:/app/static
     healthcheck:
-      test: ["CMD", "curl", "-f", "https://bg.ai.taj.alminessa.com/"]
+      test: ["CMD", "curl", "-f", "https://bg.ai.alminessa.com/"]
       interval: 30s
       timeout: 10s
       retries: 5
