--- a/.env
+++ b/.env
@@ -1,7 +1,7 @@
 API_TITLE="Evo API"
 API_DESCRIPTION="API para execução de agentes de IA"
 API_VERSION="1.0.0"
-API_URL="https://bg.ai.alminessa.com"
+API_URL="http://localhost:8100"
 
 ORGANIZATION_NAME="Evo AI"
 ORGANIZATION_URL="https://evoai.evoapicloud.com"
