--- a/.env
+++ b/.env
@@ -10,14 +10,14 @@ ORGANIZATION_URL="https://evoai.evoapicloud.com"
 AI_ENGINE="adk"
 
 # Database settings
-POSTGRES_CONNECTION_STRING="postgresql://postgres:root@localhost:5432/evo_ai"
+POSTGRES_CONNECTION_STRING="postgresql://postgres:postgres@postgres:5432/evo_ai"
 
 # Logging settings
 LOG_LEVEL="INFO"
 LOG_DIR="logs"
 
 # Redis settings
-REDIS_HOST="localhost"
+REDIS_HOST="redis"
 REDIS_PORT=6379
 REDIS_DB=0
 REDIS_PASSWORD="your-redis-password"
