--- a/.env
+++ b/.env
@@ -20,7 +20,7 @@ LOG_DIR="logs"
 REDIS_HOST="redis"
 REDIS_PORT=6379
 REDIS_DB=0
-REDIS_PASSWORD=supersecurepass123
+REDIS_PASSWORD="supersecurepass123"
 REDIS_SSL=false
 REDIS_KEY_PREFIX="a2a:"
 REDIS_TTL=3600
@@ -29,13 +29,13 @@ REDIS_TTL=3600
 TOOLS_CACHE_TTL=3600
 
 # JWT settings
-JWT_SECRET_KEY=supersecurepass123
+JWT_SECRET_KEY="supersecurepass123"
 JWT_ALGORITHM="HS256"
 # In seconds
 JWT_EXPIRATION_TIME=3600
 
 # Encryption key for API keys
-ENCRYPTION_KEY=supersecurepass123
+ENCRYPTION_KEY="supersecurepass123"
 
 # Email provider settings
 EMAIL_PROVIDER="sendgrid"
