docker-compose.yml

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -8,6 +8,14 @@ services:
       - redis
     ports:
       - "8801:8800"
+
+      labels:
+       - "traefik.enable=true"
+       - "traefik.http.routers.api.rule=Host(`bg.ai.alminessa.com`)"
+       - "traefik.http.routers.api.entrypoints=https,http"
+       - "traefik.http.routers.api.tls=true"
+       - "traefik.http.services.api.loadbalancer.server.port=8800"
+       
     environment:
       POSTGRES_CONNECTION_STRING: postgresql://postgres:${POSTGRES_PASSWORD:-postgres}@postgres:5432/evo_ai
       REDIS_HOST: redis
@@ -81,9 +89,6 @@ services:
         limits:
           cpus: "0.5"
           memory: 500M
-labels:
-  - "traefik.http.services.api.loadbalancer.server.port=8800"
-
 
 volumes:
   postgres_data:
