--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -34,7 +34,7 @@ services:
       - ./logs:/app/logs
       - ./static:/app/static
     healthcheck:
-      test: ["CMD", "curl", "-f", "http://localhost:8800/docs"]
+      test: ["CMD", "curl", "-f", "http://localhost:8800"]
       interval: 30s
       timeout: 10s
       retries: 5
@@ -74,7 +74,7 @@ services:
       - --appendonly
       - "yes"
       - --requirepass
-      - "${REDIS_PASSWORD}"
+      - "supersecurepass123"
     ports:
       - "${REDIS_PORT:-6380}:6379"
     volumes:
